Switch to tensorflow CSV format.